src/objects/featfinder__Features__c.object
<CustomObject>
    <fields>
        <fullName>featfinder__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>featfinder__Feature__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Feature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>featfinder__Feature_discussion__c</fullName>
        <description>Parent Feature discussion</description>
        <label>Feature discussion</label>
        <referenceTo>featfinder__SFF_Feature_discussion__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>featfinder__Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__Release_Notes_URL_PDF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release_Notes_URL_PDF</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>featfinder__Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__sub_product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>sub product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__ui_impact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ui impact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Feature</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>